# numeric_utility

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
benchmark/: CMakeLists.txt  benchmark_isprime.cpp
cmake/: numeric_utility-config.cmake.in
include/: File.hpp  amicable_numbers.hpp  circular_buffer.hpp  digits.hpp  dynamiclibrary.hpp  factor.hpp  factors.hpp  file.hpp  file_descriptor.hpp  isqrt.hpp  lcm_gcd.hpp  miller_rabin.hpp  numerical_utility.hpp  pow.hpp  sieveprimes.hpp  socket.hpp  stopwatch.hpp  sysexception.hpp  to_digits.hpp  trim.hpp
lib/: CMakeLists.txt  File.cpp  circular_buffer.cpp  dynamiclibary.cpp  factor.cpp  factors.cpp  file.cpp  file_descriptor.cpp  miller_rabin.cpp  numerical_utility.cpp  pow.cpp  sieveprimes.cpp  socket.cpp  stopwatch.cpp  sysexception.cpp  to_digits.cpp  trim.cpp
lib/test/: CMakeLists.txt  factor_test.cpp  mock_strerror.cpp  test.cpp  test_circular_buffer.cpp  test_dynamic_library.cpp  test_file.cpp  test_file_descriptor.cpp  test_isqrt.cpp  test_lcm_gcd.cpp  test_miller_rabin.cpp  test_pow.cpp  test_sieve.cpp  test_socket.cpp  test_system_exception.cpp  test_to_digits.cpp  test_trim.cpp
src/: amicable_numbers.cpp  digits.cpp  factor.cpp  factors.cpp  miller_rabin.cpp  numeric_utility.cpp  numerical_utility.cpp  pow.cpp  sieveprimes.cpp
test/: CMakeLists.txt  factor_test.cpp  test.cpp  test_amicable_numbers.cpp  test_digits.cpp  test_isqrt.cpp  test_lcm_gcd.cpp  test_miller_rabin.cpp  test_pow.cpp
